--- a/app/views/katalogs/index.html.erb
+++ b/app/views/katalogs/index.html.erb
@@ -9,8 +9,8 @@
       <th><%= model_class.human_attribute_name(:nazwa) %></th>
       <th><%= model_class.human_attribute_name(:opis) %></th>
       <th><%= model_class.human_attribute_name(:url) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', default: t("helpers.actions") %></th>
+      <th>Data utworzenia</th>
+      <th>Akcje</th>
     </tr>
   </thead>
   <tbody>
@@ -20,7 +20,7 @@
           <td><%= katalog.nazwa %></td>
           <td><%= katalog.opis %></td>
           <td><a href="<%= katalog.url %>" target="_blank"><%= katalog.url %></a></td>
-        <td><%=l katalog.created_at, format: :long %></td>
+        <td><%=l katalog.created_at, format: :long%></td>
         <td>
           <%= link_to katalog_path(katalog), class: 'btn btn-xs', title: "#{ t('.show', default: t('helpers.links.show')) }" do %>
             <%= glyph 'info-sign' %>
@@ -28,7 +28,7 @@
           <%= link_to edit_katalog_path(katalog), class: 'btn btn-xs', title: "#{ t('.edit', default: t('helpers.links.edit')) }" do %>
             <%= glyph 'pencil' %>
           <%- end -%>
-          <%= link_to katalog_path(katalog), method: :delete, data: { confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')) }, class: 'btn btn-xs', title: "#{ t('.destroy', default: t('helpers.links.destroy')) }" do %>
+          <%= link_to katalog_path(katalog), method: :delete, data: { confirm: t('.confirm', default: 'Czy na pewno chcesz usunąć ten rekord?') }, class: 'btn btn-xs', title: "#{ t('.destroy', default: t('helpers.links.destroy')) }" do %>
             <%= glyph 'remove' %>
           <%- end -%>
         </td>
@@ -37,6 +37,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', default: t("helpers.links.new")),
+<%= link_to t('.new', default: 'Nowy rekord'),
             new_katalog_path,
             class: 'btn btn-primary' %>
