--- a/app/views/katalogs/_form.html.erb
+++ b/app/views/katalogs/_form.html.erb
@@ -20,8 +20,8 @@
 
   <div class="form-group">
     <div class='col-md-offset-2 col-md-10'>
-      <%= f.submit nil, class: 'btn btn-primary' %>
-      <%= link_to t('.cancel', default: t("helpers.links.cancel")),
+      <%= f.submit 'Wyślij', class: 'btn btn-primary' %>
+      <%= link_to t('.cancel', default: t("Anuluj")),
                   katalogs_path, class: 'btn btn-default' %>
     </div>
   </div>
