--- a/app/views/katalogs/show.html.erb
+++ b/app/views/katalogs/show.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Katalog -%>
 <div class="page-header">
-  <h1><%=t '.title', default: model_class.model_name.human.titleize %></h1>
+  <h1><%=t '.title', default: 'Informacje' %></h1>
 </div>
 
 <div class="fieldset">
@@ -15,13 +15,13 @@
 </div>
 
 <div class="form-group">
-  <%= link_to t('.back', default: t("helpers.links.back")),
+  <%= link_to t('.back', default: t("Wróć")),
               katalogs_path, class: 'btn btn-default'  %>
-  <%= link_to t('.edit', default: t("helpers.links.edit")),
+  <%= link_to t('.edit', default: t("Edytuj")),
               edit_katalog_path(@katalog), class: 'btn btn-default' %>
-  <%= link_to t('.destroy', default: t("helpers.links.destroy")),
+  <%= link_to t('.destroy', default: t("Usuń")),
               katalog_path(@katalog),
               method: 'delete',
-              data: { confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')) },
+              data: { confirm: t('.confirm', default: 'Czy na pewno chcesz usunąć ten rekord?') },
               class: 'btn btn-danger' %>
 </div>
