--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,45 @@
-<h1>Signup!</h1>
+<div class="row main"> 
+				<div class="main-login main-center">
 
-<% flash.each do |name, msg| %>
-<%= content_tag :div, msg, class: "alert alert-info" %>
-<% end %>
+				<% flash.each do |name, msg| %>
+    			<%= content_tag :div, msg, class: "alert alert-info" %>
+  				<% end %>
 
-<%= form_for :user, url: '/users' do |f| %>
+					<%= form_for :user, url: '/users' do |f| %>
 
-  Adres e-mail: <%= f.text_field :email %>
-  Hasło: <%= f.password_field :password %>
-  Powtórz hasło: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Zarejestruj się" %>
+						<div class="form-group">
+							<label for="email" class="cols-sm-2 control-label">Adres e-mail</label>
+							<div class="cols-sm-10">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i></span>
+									  <%= f.text_field :email, type: 'email', :required => true, class: 'form-control' %>
+								</div>
+							</div>
+						</div>
 
-<% end %>
+						<div class="form-group">
+							<label for="password" class="cols-sm-2 control-label">Hasło</label>
+							<div class="cols-sm-10">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="glyphicon glyphicon-lock" aria-hidden="true"></i></span>
+									  <%= f.password_field :password, :required => true, class: 'form-control' %>
+								</div>
+							</div>
+						</div>
+
+            <div class="form-group">
+							<label for="password" class="cols-sm-2 control-label">Powtórz hasło</label>
+							<div class="cols-sm-10">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="glyphicon glyphicon-lock" aria-hidden="true"></i></span>
+									  <%= f.password_field :password_confirmation, :required => true, class: 'form-control' %>
+								</div>
+							</div>
+						</div>
+
+						<div class="form-group ">
+							<%= f.submit "Zarejestruj się", class: 'form-control btn btn-primary' %>
+						</div>
+					<% end %>
+				</div>
+			</div>
