--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <nav>
       <ul class="nav navbar-nav navbar-left">
-        <li><%= link_to "Katalog stron www",  '/' %></li>
+        <li><%= link_to "Katalog stron www",  '/katalogs' %></li>
       </ul>
       <% if @current_user %>
       <ul class="nav navbar-nav navbar-right">
